--- a/assets/css/mystyle.css
+++ b/assets/css/mystyle.css
@@ -25,6 +25,10 @@ nav {
     padding: 5px;
     filter: drop-shadow(1px 1px 7px);
 }
+nav a {
+    color: black;
+    text-transform: uppercase;
+}
 
 section {
     padding-left: 5px;
@@ -38,4 +42,8 @@ section {
 @keyframes slidetotheleft {
     from { background-position: top right; }
     to { background-position: top left; }
+}
+
+p {
+    margin-bottom: 1em;
 }
