--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
     <title>{{ page.title }}</title>
     <link rel="stylesheet" href="/assets/css/mystyle.css">
     <link rel="stylesheet" href="/assets/css/rouge.css">
+    <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell@1.0.2/nutshell.js"></script>
     {% seo %}
   </head>
   <body>
